--- a/jupyter_notebooks/Lecture_05_ensembles/[ENG]_hw05_logit_rf_credit_scoring.ipynb
+++ b/jupyter_notebooks/Lecture_05_ensembles/[ENG]_hw05_logit_rf_credit_scoring.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4          400.0                 0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "Name: SeriousDlqin2yrs, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        " 'NumberOfDependents']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,11 +496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "lr = LogisticRegression(random_state=5, class_weight='balanced')"
+    "lr = LogisticRegression(random_state=42, class_weight='balanced')"
    ]
   },
   {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,11 +528,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=5)"
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)"
    ]
   },
   {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -575,16 +575,16 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:    4.9s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:    4.0s finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "({'C': 0.001}, 0.8089120626797153, 1, 0.008137559189742445)"
+       "({'C': 0.001}, 0.8085518150370573, 1, 0.007088427639115826)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,29 +602,29 @@
    "source": [
     "**Question 4.** Can we consider the best model stable? The model is *stable* if the standard deviation on validation is less than 0.5%. Save the *ROC AUC* value of the best model; it will be useful for the following tasks.\n",
     "\n",
-    "1. ### Yes\n",
-    "2. No"
+    "1. Yes\n",
+    "2. ### No"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.008137559189742445"
+       "0.7088427639115826"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "gs.cv_results_['std_test_score'][gs.best_index_]"
+    "gs.cv_results_['std_test_score'][gs.best_index_]*100"
    ]
   },
   {
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -655,11 +655,11 @@
        "LogisticRegression(C=0.001, class_weight='balanced', dual=False,\n",
        "                   fit_intercept=True, intercept_scaling=1, l1_ratio=None,\n",
        "                   max_iter=100, multi_class='auto', n_jobs=None, penalty='l2',\n",
-       "                   random_state=5, solver='lbfgs', tol=0.0001, verbose=0,\n",
+       "                   random_state=42, solver='lbfgs', tol=0.0001, verbose=0,\n",
        "                   warm_start=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,14 +669,14 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "scale = StandardScaler()\n",
-    "lr = LogisticRegression(C=0.001, random_state=5, class_weight='balanced')\n",
+    "lr = LogisticRegression(C=0.001, random_state=42, class_weight='balanced')\n",
     "scaled_X = scale.fit_transform(X)\n",
     "lr.fit(scaled_X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "2                             DebtRatio   -0.024096"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "0.11426375283065275"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -888,14 +888,14 @@
        "0                                   age -0.013305"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "lr = LogisticRegression(C=0.001, random_state=5, class_weight='balanced')\n",
+    "lr = LogisticRegression(C=0.001, random_state=42, class_weight='balanced')\n",
     "lr.fit(X, y)\n",
     "\n",
     "pd.DataFrame({'feat': independent_columns_names,\n",
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "0.766355167609517"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1017,14 +1017,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:   16.2s\n",
-      "[Parallel(n_jobs=-1)]: Done 180 out of 180 | elapsed:  2.6min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:   14.6s\n",
+      "[Parallel(n_jobs=-1)]: Done 180 out of 180 | elapsed:  2.8min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=StratifiedKFold(n_splits=5, random_state=5, shuffle=True),\n",
+       "GridSearchCV(cv=StratifiedKFold(n_splits=5, random_state=42, shuffle=True),\n",
        "             error_score=nan,\n",
        "             estimator=RandomForestClassifier(bootstrap=True, ccp_alpha=0.0,\n",
        "                                              class_weight='balanced',\n",
@@ -1047,7 +1047,7 @@
        "             scoring='roc_auc', verbose=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1060,14 +1060,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.026805420792832102\n"
+      "0.026470609435897963\n"
      ]
     }
    ],
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1101,7 @@
        "'NumberOfDependents'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1179,17 +1179,17 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  3.1min\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:  8.7min finished\n"
+      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:  3.7min\n",
+      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed: 10.5min finished\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.807140803304167"
+       "0.8071760291340597"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
     "bg = BaggingClassifier(LogisticRegression(class_weight='balanced'),\n",
     "                       n_estimators=100, n_jobs=-1, random_state=42)\n",
     "random_grid_search = RandomizedSearchCV(bg, parameters, n_jobs=-1, \n",
-    "                                   scoring='roc_auc', cv=skf, n_iter=20, random_state=1,\n",
+    "                                   scoring='roc_auc', cv=skf, n_iter=20, random_state=42,\n",
     "                                   verbose=True)\n",
     "random_grid_search = random_grid_search.fit(X, y)\n",
     "\n",
